--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,32 +1,83 @@
-#log {
-  width: 590px;
-  height: 290px;
-  border: 1px solid rgb(192, 192, 192);
-  padding: 5px;
-  margin-bottom: 5px;
-  font: 11pt 'Palatino Linotype';
-  overflow: auto;
-}
-#input {
-  width: 550px;
-}
-#send {
-  width: 50px;
+body {
+    background-color: #FBF8F1;
 }
 
-.in {
-  color: rgb(0, 0, 0);
+.header {
+    /*width: auto;*/
+    text-align: center;
+    display: table;
+    width: 100%;
+    color: #756D64;
 }
-.out {
-  color: rgb(0, 0, 0);
+
+.container {
+    text-align: center;
 }
-.time {
-  color: rgb(144, 144, 144);
-  font: 10pt 'Courier New';
+
+.map-field {
+    border-radius: 4px;
+    background-color: #BBADA0;
+    margin: auto;
 }
-.system {
-  color: rgb(165, 42, 42);
+
+.map-item {
+    height: 32px;
+    width: 32px;
+    border-radius: 4px;
+    margin: 1px;
+    font-size: large;
+    text-align: center;
+    padding: 0px;
+    color: #7A7066;
+    background-color: #CDC1B3;
 }
-.user {
-  color: rgb(25, 25, 112);
+
+.chat {
+    width: 100%;
+    text-align: center;
 }
+
+#log {
+    width: 590px;
+    height: 290px;
+    border: 1px solid rgb(192, 192, 192);
+    padding: 5px;
+    margin: 10px;
+    font: 11pt 'Palatino Linotype';
+    overflow: auto;
+}
+
+/* thanks 2048 for colors */
+
+/*#log {*/
+/*width: 590px;*/
+/*height: 290px;*/
+/*border: 1px solid rgb(192, 192, 192);*/
+/*padding: 5px;*/
+/*margin-bottom: 5px;*/
+/*font: 11pt 'Palatino Linotype';*/
+/*overflow: auto;*/
+/*}*/
+/*#input {*/
+/*width: 550px;*/
+/*}*/
+/*#send {*/
+/*width: 50px;*/
+/*}*/
+
+/*.in {*/
+/*color: rgb(0, 0, 0);*/
+/*}*/
+/*.out {*/
+/*color: rgb(0, 0, 0);*/
+/*}*/
+/*.time {*/
+/*color: rgb(144, 144, 144);*/
+/*font: 10pt 'Courier New';*/
+/*}*/
+/*.system {*/
+/*color: rgb(165, 42, 42);*/
+/*}*/
+/*.user {*/
+/*color: rgb(25, 25, 112);*/
+/*}*/
