--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,10 +23,17 @@
 </div>
 
 <div class="chat">
-    <div>
-        <div id="log"></div>
-        <div>
-            <input type="text" id="input"><input type="submit" id="send" value="Send">
-        </div>
+    <div id="log"></div>
+    <div class="message-input">
+        <input type="text" id="message-input">
+        <input type="submit" id="send" value="Send">
     </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="footer">
+    MIPT, 2016.
 </div>
