restart game if there is no players

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
                         <th class="map-item-container"><input id="{{@../index}} {{@index}}"
                                                               class="map-item"
                                                               type="submit"
-                                                              value="{{this}}"
+                                                              value=""
                                                               onclick="sendClick({{@../index}}, {{@index}})"/></th>
                     {{/each}}
                 </tr>
