--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
     <div><h1>MIPT TicTacToe</h1></div>
     <div><h3 id="login">Ваш логин:</h3></div>
     <div><h3 id="nextPlayer">Очередь игрока:</h3></div>
+    <div><h4 id="timer"></h4></div>
 </div>
 
 <div class="container">
